framec_tests/language_specific/rust/v3_facade_smoke/negative/strict_malformed_stmt.frm
@target rust

system S {
    machine:
        $A {
            e() {
                => $^
                let x = ; // malformed native statement
            }
        }
}

